@@ -1,0 +1,17 @@
+# -*-ruby-*-
+#
+# Copyright (c) 2004-2006 SASADA Koichi <ko1 at atdot.net>
+#
+# This program is free software with ABSOLUTELY NO WARRANTY.
+# You can re-distribute and/or modify this program under
+# the same terms of the Ruby's lisence.
+#
+#
+#
+
+class SendPingBot < Nadoka::NDK_Bot
+  def on_timer *args 
+    @manager.ping_to_clients
+  end
+end
+
